--- a/face/index.html
+++ b/face/index.html
@@ -49,5 +49,6 @@
 
     <script src="./js/lib/face-api.min.js"></script>
     <script type="module" src="js/init.js"></script>
+    <script src="https://orangespaceman.github.io/lab-badge/lab-badge.min.js"></script>
   </body>
 </html>
