--- a/accel/index.html
+++ b/accel/index.html
@@ -48,5 +48,6 @@
     </div>
 
     <script type="module" src="js/init.js"></script>
+    <script src="https://orangespaceman.github.io/lab-badge/lab-badge.min.js"></script>
   </body>
 </html>
